codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__textarea__tests__textarea_styled_overlays_stay_inside_the_textarea.snap
---
source: tui/src/bottom_pane/textarea.rs
expression: "snapshots.join(\"\\n\\n\")"
---
element
"    KEEP"
" nex    "
"t       "


highlight
"    KEEP"
" nex    "
"t       "
